@@ -24,9 +24,6 @@
                     </p>
                         <ul>
                             <li>Additional refactorings</li>
-                            <li>Refactoring IDE Plug-in</li>
-                            <li>High-Level Change Documentation Generation</li>
-                            <li>Stored procedures/Views support</li>
                             <li>Extracting sample data from a larger dataset</li>
                             <li>Generating testing data for tables</li>
                             <li>DB unit testing harness/utilities</li>
