@@ -93,6 +93,9 @@
                                             <li>
                                                 <a href="merge_columns_change.html">Merge Columns</a>
                                             </li>
+                                            <li>
+                                                <a href="create_procedure_change.html">Create Stored Procedure</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>Data Quality Refactorings
