@@ -58,6 +58,9 @@
                                 <li>
                                     <a href="merge_columns_change.html">Merge Columns</a>
                                 </li>
+                                <li>
+                                    <a href="created_procedure_change.html">Create Stored Procedure</a>
+                                </li>
                             </ul>
                         </li>
                         <li>Data Quality Refactorings
